<resources>
    <string name="app_name">Economy Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_nav_button">Home</string>
    <string name="register_nav_button">Registro</string>
    <string name="recurrences_nav_bottom">Ricorrenze</string>
    <string name="movimento_di_default">Movimento di default</string>
    <string name="default_movement_amount">default movement amount</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="default_movement_date">default_movement_date</string>
    <string name="default_movement_category">default_movement_category</string>
    <string name="euro">€</string>
    <string name="tutti">Tutti</string>
    <string name="uscite">Uscite</string>
    <string name="entrate">Entrate</string>
    <string name="no_movements">No movements</string>
    <string name="bilancio">Bilancio:</string>
    <string name="categoria">Categoria:</string>
    <string name="movimento">Movimento</string>
    <string name="crea">Crea</string>
    <string name="seleziona_data">Seleziona data</string>
    <string name="ammontare">Ammontare</string>
    <string name="delete_category">Elimina categoria</string>
    <string name="delete_movement">Elimina movimento</string>
    <string name="category_deletion_confirmation">Sei sicuro di voler eliminare questa categoria? Cancellerai anche tutti i movimenti ad essa associati</string>
    <string name="movement_deletion_confirmation">Sei sicuro di voler eliminare questo movimento?</string>
    <string name="delete_category_title">Elimina Categoria</string>
    <string name="delete_category_message">Sei sicuro di voler eliminare questa categoria?</string>
    <string name="cancel">Annulla</string>
    <string name="new_movement_title">Crea Movimento:</string>
    <string name="new_movement_button">Crea</string>
    <string name="edit_movement_title">Modifica Movimento:</string>
    <string name="edit_movement_button">Salva</string>
    <string name="new_category_title">Crea Categoria:</string>
    <string name="new_category_button">Crea</string>
    <string name="edit_category_title">Modifica Categoria:</string>
    <string name="edit_category_button">Salva</string>
    <string name="search_category_placeholder">Cerca una categoria…</string>
    <string name="category_already_exists">Questa categoria esiste già</string>
    <string name="confirm">Conferma</string>
    <string name="insert_category_identifier">Inserisci il nome della categoria</string>
    <string name="insert_movement_amount">Inserisci l\'importo della transazione</string>
    <string name="all_categories_identifier">Tutte</string>
    <string name="insert_movement_date">Seleziona la data della transazione</string>
    <string name="categories">categorie</string>
    <string name="how_did_it_go" type="id">Come è andata?</string>
    <string name="how_is_it_going" type="id">Come sta andando?</string>

    <string name="great_job_this_month_you_earned">Ottimo lavoro! Questo mese hai guadagnato </string>
    <string name="fantastic_your_monthly_earnings_are">Fantastico! I tuoi guadagni mensili ammontano a </string>
    <string name="congratulations_you_have_accumulated">Congratulazioni! Hai accumulato ben </string>
    <string name="excellent_you_have_taken_home">Eccellente! Hai portato a casa </string>
    <string name="super_your_earnings_this_month_have_been">Super! Il tuo guadagno di questo mese è stato di </string>
    <string name="watch_out_for_expenses_this_month_you_spent">Attenzione alle spese! Questo mese hai speso </string>
    <string name="your_monthly_costs_have_been">I tuoi costi mensili sono stati </string>
    <string name="remember_to_watch_your_expenses_they_amount_to">Ricorda di tenere d\'occhio le tue spese: ammontano a </string>
    <string name="your_expenses_this_month_have_been">Le tue uscite questo mese sono state di </string>
    <string name="control_your_expenses_you_spent">Controlla le tue spese, hai speso </string>
    <string name="the_net_total_for_the_month_is">Il totale netto per il mese è </string>
    <string name="the_overall_monthly_balance_is">Il saldo mensile complessivo è </string>
    <string name="the_final_result_for_this_month_is">Il risultato finale di questo mese è </string>
    <string name="the_balance_for_this_month_is">Il bilancio di questo mese è </string>
    <string name="the_total_for_your_finances_this_month_is">Il totale delle tue finanze per questo mese è </string>

</resources>