<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_movement_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_movement_amount"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_movement_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_movement_category_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/categoria"
        app:layout_constraintTop_toBottomOf="@+id/input_movement_amount_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/input_movement_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:completionThreshold="1"
            android:dropDownHeight="300dp"
            android:inputType="textAutoComplete"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_movement_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_movement_date"
        app:layout_constraintTop_toBottomOf="@+id/input_movement_category_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_movement_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>