<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/input_movement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Default"
        android:textAppearance="?textAppearanceTitleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/input_movement_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/input_movement_title" />

    <LinearLayout
        android:id="@+id/input_section_movement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_movement_divider">

        <EditText
            android:id="@+id/input_movement_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="numberSigned"
            android:hint="@string/ammontare"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_movement_category_id_layout"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/categoria">

            <AutoCompleteTextView
                android:id="@+id/input_movement_category_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:dropDownHeight="300dp"
                android:inputType="textAutoComplete"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/input_movement_created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:hint="@string/seleziona_data" />


    </LinearLayout>

    <Button
        android:id="@+id/input_movement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_section_movement" />

</androidx.constraintlayout.widget.ConstraintLayout>
